@@ -8,9 +8,10 @@ ispCP ω 1.0.0 Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
-2007-07-13 Benedikt Heintel
+2007-07-15 Benedikt Heintel
 	- GUI:
 		* Fixed #457: Add max-attempts limit for lost password's CAPTCHA
+		* Fixed #481: Error after Login
 
 2007-07-13 Benedikt Heintel
 	- GUI:
